# MyClangFormat

./: .clang-format  CMakeLists.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json  main.cpp
BinaryTree/: BinarySearchTree.h  BinaryTreeNode.h
Vector/: Vector.h
